--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.1.0",
     "@tailwindcss/vite": "^4.1.6",
     "axios": "^1.9.0",
+    "chroma-js": "^3.1.2",
     "leaflet": "^1.9.4",
     "leaflet.heat": "^0.2.0",
     "lenis": "^1.3.3",
