--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "leaflet": "^1.9.4",
     "leaflet.heat": "^0.2.0",
     "lenis": "^1.3.3",
+    "lucide-react": "^0.511.0",
     "motion": "^12.12.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
